<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.library.widgets.views.TitleBar
        android:id="@+id/mTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rightIsShow="true"
        app:rightText="@string/string_regist" />

    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:tr_pureScrollMode_on="true">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25px"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/ImageViewStyle"
                            android:src="@mipmap/logo1" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12px"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextViewStyle"
                                android:text="@string/app_name"
                                android:textColor="@color/color_666"
                                android:textSize="40px"
                                android:textStyle="bold" />

                            <TextView
                                style="@style/TextViewStyle"
                                android:layout_marginTop="9px"
                                android:text="@string/app_name_explain"
                                android:textColor="@color/color_808080"
                                android:textSize="22px"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="98px"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24px"
                            android:layout_marginRight="24px">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="21px"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    style="@style/ImageViewStyle"
                                    android:src="@mipmap/shouji" />

                                <EditText
                                    style="@style/EditTextStyle"
                                    android:layout_marginLeft="16px"
                                    android:layout_marginRight="16px"
                                    android:hint="@string/string_input_phone_hint" />

                                <ImageView
                                    style="@style/ImageViewStyle"
                                    android:src="@mipmap/shouji" />


                            </LinearLayout>

                            <View
                                style="@style/PartingLineView"
                                android:layout_width="match_parent"
                                android:layout_height="2px"
                                android:layout_alignParentBottom="true" />
                        </RelativeLayout>
                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
</LinearLayout>